feat: add openthread panel
