# crates/backend/src/api/openapi.rs
@@ -20,6 +20,7 @@ use utoipa::{Modify, OpenApi};
         // System
         super::system::get_version,
         super::thread::get_thread_status,
+        super::thread::scan_thread_mesh,
         super::thread::create_thread_network,
         super::thread::import_thread_dataset,
         // Auth
@@ -236,6 +237,8 @@ use utoipa::{Modify, OpenApi};
         super::thread::ThreadStatusResponse,
         super::thread::ThreadNetworkResponse,
         super::thread::ThreadNetworkScanResponse,
+        super::thread::ThreadMeshDeviceResponse,
+        super::thread::ThreadMeshScanResponse,
         super::thread::CreateThreadNetworkRequest,
         super::thread::ImportThreadDatasetRequest,
         // Outbox
